Remove no-longer-used macro HAVE_FTIME.
* configure.in (machine): Do not set to 'vax', since src/m/vax.h
is being removed.
(AC_CHECK_FUNCS): Remove ftime.
* admin/CPP-DEFINES (HAVE_FTIME): Remove.
* nt/config.nt (HAVE_FTIME): Remove undef; not needed.
* src/m/vax.h: Remove; no longer needed since HAVE_FTIME is being removed.
* src/s/ms-w32.h (HAVE_FTIME): Remove; not needed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-19  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* configure.in (machine): Do not set to 'vax', since src/m/vax.h
+	is being removed.
+	(AC_CHECK_FUNCS): Remove ftime.
+
 2012-05-19  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (install-arch-indep): Remove unneeded subshell.
