--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-19  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* config.nt (HAVE_FTIME): Remove undef; not needed.
+
 2012-05-01  Glenn Morris  <rgm@gnu.org>
 
 	* config.nt (HAVE_LIBNCURSES): Remove undef; not needed.
