--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-19  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* CPP-DEFINES (HAVE_GETDOMAINNAME): Remove.
+
 	* CPP-DEFINES (HAVE_FTIME): Remove.
 
 2012-05-02  Glenn Morris  <rgm@gnu.org>
