--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-19  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/bytecomp.el (byte-compile-root-dir): New var.
+	(byte-compile-warning-prefix, batch-byte-compile-file): Use it.
+
 2012-05-19  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc/calc.el (calc-ensure-consistent-units): New variable.
