--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-21  Paul Eggert  <eggert@cs.ucla.edu>
 
+	Use full name for m4/gnulib-comp.m4.  (Bug#11529)
+	* merge-gnulib: Leave m4/gnulib-comp.m4's name alone.
+
 	Assume C89 or later.
 	* CPP-DEFINES: Remove NULL, const.
 
