--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-21  Eli Zaretskii  <eliz@gnu.org>
+
+	* msdos.c (internal_terminal_init) <Vwindow_system_version>:
+	Update value to 24.
+
 2012-05-19  Eli Zaretskii  <eliz@gnu.org>
 
 	* xdisp.c (move_it_to): Under MOVE_TO_Y, when restoring iterator
