* lib-src/Makefile.in (install): Remove unneeded chmods.
INSTALL_PROGRAM and INSTALL_SCRIPT default to mode 755.

--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-22  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (install): Remove unneeded chmods.
+
 2012-05-21  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Assume C89 or later.
