--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-22  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (blessmail, install-arch-dep, uninstall):
+	Check cd lib-src works.
+	(install-arch-dep, uninstall): Remove unneeded subshells.
+
 2012-05-21  Glenn Morris  <rgm@gnu.org>
 
 	* update-subdirs: Move to build-aux/.
