--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-22  Juanma Barranquero  <lekktu@gmail.com>
+
+	* emacs-lisp/edebug.el (top): Do not load or setup up loading of
+	cl-specs.el, which no longer exists.
+
 2012-05-22  Glenn Morris  <rgm@gnu.org>
 
 	* info.el (info-emacs-bug): New command.
