No need to define gnus-default-nntp-server in paths.el
Don't see a need for this to be autoloaded, since it is only used in
gnus.el (in one place, as a fallback).  Maybe it should be obsolete?

* paths.el (gnus-default-nntp-server): Remove (gnus.el defines it).

* gnus/gnus.el (gnus-default-nntp-server): Make it a defcustom.
Merge in doc from paths.el version.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-24  Glenn Morris  <rgm@gnu.org>
 
+	* paths.el (gnus-default-nntp-server): Remove (gnus.el defines it).
+
 	* paths.el (rmail-file-name, rmail-spool-directory): Move from here...
 	* mail/rmail.el (rmail-file-name, rmail-spool-directory): ... to here.
 	Make the latter a defcustom, with a delayed initialization.
