* paths.el (news-directory, news-path): Move to gnus/nnspool.el.
* gnus/nnspool.el (news-directory, news-path): Move here from paths.el.
Don't see a need for these to be autoloaded.  This file is the only
place that uses them, to init another variable.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-24  Glenn Morris  <rgm@gnu.org>
 
+	* paths.el (news-directory, news-path): Move to gnus/nnspool.el.
+
 	* paths.el (gnus-default-nntp-server): Remove (gnus.el defines it).
 
 	* paths.el (rmail-file-name, rmail-spool-directory): Move from here...
