--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,6 +1,7 @@
 2012-05-24  Glenn Morris  <rgm@gnu.org>
 
-	* paths.el (news-directory, news-path): Move to gnus/nnspool.el.
+	* paths.el (news-directory, news-path, news-inews-program):
+	Move to gnus/nnspool.el.
 
 	* paths.el (gnus-default-nntp-server): Remove (gnus.el defines it).
 
