--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-25  Eli Zaretskii  <eliz@gnu.org>
+
+	* cus-start.el <vertical-centering-font-regexp>: Avoid warning on
+	platforms that don't link in fontset.c.
+
 2012-05-25  Juri Linkov  <juri@jurta.org>
 
 	Use the same diff color scheme as in modern VCSes (bug#10181).
