* src/fileio.c, src/character.h: Minor style tweaks.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-25  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* fileio.c, character.h: Minor style tweaks.
+
 2012-05-24  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* window.h (clip_changed): Remove useless declaration.
