There's no reason not to compile version.el
AFAICS, this is ancient code dating from when there was an "inc-vers.el",
that was used to bump the build number on version.el. Nowadays that
happens in loadup.el.

* lisp/version.el: Remove no-byte-compile and associated formatting.

* lisp/loadup.el: No need to load lisp/version.el uncompiled.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-25  Glenn Morris  <rgm@gnu.org>
+
+	* version.el: Remove no-byte-compile and associated formatting.
+	* loadup.el: No need to load version.el uncompiled.  AFAICS, this
+	is ancient code from when there was an "inc-vers.el".
+
 2012-05-25  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* progmodes/gdb-mi.el: Minor style changes.
